@@ -8,6 +8,7 @@ softwarecenter/app.py
 softwarecenter/SimpleGtkbuilderApp.py
 softwarecenter/apt/aptcache.py
 softwarecenter/backend/aptd.py
+softwarecenter/backend/channel.py
 softwarecenter/db/database.py
 softwarecenter/db/update.py
 softwarecenter/distro/__init__.py
